--- a/bukkit/pom.xml
+++ b/bukkit/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>team.unnamed</groupId>
         <artifactId>commandflow</artifactId>
-        <version>0.7.2</version>
+        <version>0.7.3-oasix</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
