--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>team.unnamed</groupId>
     <artifactId>commandflow</artifactId>
-    <version>0.7.2</version>
+    <version>0.7.3-oasix</version>
     <modules>
         <module>api</module>
         <module>discord</module>
@@ -42,7 +42,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <revision>0.7.2</revision>
+        <revision>0.7.3-oasix</revision>
     </properties>
 
     <build>
@@ -52,8 +52,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
         </plugins>
